--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">Trocar de celular</button>
-            <button class="botao">Fazer minha Carteira</button>
-            <button class="botao">Comprar uma moto</button>
-            <button class="botao">E voltar a fazer academia</button>
+            <button class="botao">Crescer o meu negócio</button>
+            <button class="botao">Ter mais momentos inesquecíveis</button>
+            <button class="botao">Ser mais saudável</button>
+            <button class="botao">Vencer meus problemas</button>
         </div>
     </section>
 </body>
